--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,14 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script>
-    const DateData = fetch("http://localhost:3000/api/v1/Date")
-        .then((r) => r.json())
-        .then((data) => console.log(data))
-        .catch((e) =>  console.log(e));</script>
     <script defer src="./date_fetcher.js"></script>
 </head>
 <body>
-    :>
+    <h1>Spaced-repetition-calendar</h1>
 </body>
 </html>
