--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
     <script defer src="./date_fetcher.js"></script>
 </head>
 <body>
-    <h1>Spaced-repetition-calendar</h1>
+    <div id="root"></div>
+    <script type="module" text="text/js" src="./Components/Main.jsx"></script>
 </body>
 </html>
